force-app/main/default/objects/PIRL_Template__c/PIRL_Template__c.object-meta.xml
<CustomObject>
    <label>PIRL Template</label>
    <nameField>
        <label>PIRL Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIRL Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>