force-app/main/default/objects/PIRL_Template__c/fields/Element_Number__c.field-meta.xml
<CustomField>
    <fullName>Element_Number__c</fullName>
    <description>Specific identifier for PIRL Element</description>
    <label>Element Number</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>